--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,10 @@ serde = { version = "1.0.158", features = ["derive"] }
 serde_json = "1.0.94"
 once_cell = "1.18.0"
 regex = "1.9.1"
+
+[profile.release]
+strip = true
+lto = true
+codegen-units = 1
+opt-level = "z"
+panic = "abort"
